# snake_ai

./: README.MD  Report.md  a2c_snake.ipynb  a2c_snake_img.ipynb  elitism.py  gen_algo.ipynb  pyproject.toml  q_snake_keras.ipynb  q_snake_keras_distanced.ipynb  q_snake_keras_img.ipynb  q_snake_keras_train.py  q_snake_keras_train_distanced.py  q_snake_keras_train_img.py  q_snake_tf.ipynb  q_snake_tf_train.py  requirements.txt  snake_v0_ai.py
weights/value_based/q/binary/: 100.keras  150.keras  200.keras  200_bk.keras  50.keras
