[tool.poetry]
name = "snake-ai"
version = "0.1.0"
description = ""
authors = ["ceo-s <alex_s_2002@mail.ru>"]
readme = "README.md"
packages = [{ include = "snake_ai" }]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
numpy = "1.25.0"
matplotlib = "^3.8.0"
gymnasium = { extras = ["classic-control"], version = "^0.29.1" }
ipykernel = "^6.25.2"
imageio = "2.4.1"
cython = "^3.0.2"
tensorflow = "2.14"
deap = "^1.4.1"
pygame = "^2.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
